<resources>
    <string name="app_name">Organizer</string>
    <string name="buttonsave">+</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="describeEvent">Describe Event</string>
    <string name="nameEvent">Enter name event</string>
    <string name="head">Create new event</string>
    <string name="godzina">Godzina:</string>
    <string name="minuta">Minuta:</string>
    <string name="nazwa">Nazwa:</string>
    <string name="opis">Opis</string>
    <string name="showbutton">Show</string>
    <string name="multiinsert">Multi </string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
</resources>
