<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">


    <EditText
        android:id="@+id/Describe_text"
        android:layout_width="291dp"
        android:layout_height="189dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="396dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/describeEvent"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/NameEvent"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="332dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nameEvent"
        android:inputType="textPersonName" />

    <TimePicker
        android:id="@+id/TimerPicker"
        android:layout_width="287dp"
        android:layout_height="228dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="87dp"
        android:timePickerMode="spinner" />

    <TextView
        android:id="@+id/Headtext"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/head"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="103dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="73dp"
        android:layout_marginBottom="57dp"
        android:text="@string/Save" />

    <Button
        android:id="@+id/CancelButton"
        android:layout_width="103dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="56dp"
        android:text="@android:string/cancel" />

</RelativeLayout>